Removed unused parameter MaxPermSize from scripts